Init google tag manager

--- a/ClientAstree/Views/User/Dashboard.cshtml
+++ b/ClientAstree/Views/User/Dashboard.cshtml
@@ -44,7 +44,7 @@
     .card-title {
         font-family: 'Roboto', sans-serif;
         font-size: 1.5rem; /* Larger title */
-        color: #FFD700; /* Gold color for highlights */
+        color: #FFFF; /* Gold color for highlights */
     }
 
     .card-text {
@@ -66,13 +66,13 @@
     }
 
     .btn-primary {
-        background-color: #FFD700; /* Gold for highlights */
+        background-color: #FFFF; /* Gold for highlights */
         color: #1E3A7A; /* Set the button text color to match the card background */
         border: none; /* Remove the button border */
     }
 
     .btn-primary:hover {
-        background-color: #f8f9fa; /* Lighten the button background on hover */
+        background-color: #4E6B8B; /* Lighten the button background on hover */
         color: #1E3A7A; /* Keep the button text color the same */
     }
 </style>
