--- a/ClientAstree/Views/User/Dashboard.cshtml
+++ b/ClientAstree/Views/User/Dashboard.cshtml
@@ -79,7 +79,6 @@
 
 <div class="container-fluid bg-image">
     <div class="row">
-        <!-- Side Menu on the left -->
         <div class="col-lg-2 col-md-3 col-sm-4 py-0 my-0 px-0 mx-0">
             @Html.Partial("_SideMenu")
         </div>
@@ -130,6 +129,18 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- Add GA data here -->
+                    <div class="col-md-3">
+                        <div class="card" style="width: 100%;">
+                            <img class="card-img-top" src="/img/dashboard/analyticsDash.png" alt="Analytics Logo">
+                            <div class="card-body">
+                                <h4 class="card-title">Sessions</h4>
+                                <p class="card-text">@Model.Sessions sessions in the last 30 days.</p>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </div>
