--- a/ClientAstree/Views/PropertyContract/Details.cshtml
+++ b/ClientAstree/Views/PropertyContract/Details.cshtml
@@ -152,14 +152,14 @@
             </div>
             <div class="modal-body">
                 <p>If you want to sign this contract, please provide the following documents:</p>
-                <ul>
-                    <li><i class="fas fa-id-card"></i> La pièce d'identité du souscripteur (CIN / passeport).</li>
-                    <li><i class="fas fa-car"></i> La carte grise du véhicule.</li>
-                    <li><i class="fas fa-certificate"></i> La visite technique et la vignette.</li>
-                    <li><i class="fas fa-id-badge"></i> Le permis de conduire de l'assuré.</li>
-                    <li><i class="fas fa-file-alt"></i> Le relevé d'informations (justificatif de la dernière classe Bonus-Malus de l'assuré).</li>
-                    <li><i class="fas fa-file-contract"></i> L'attestation de leasing.</li>
-                </ul>
+<ul>
+    <li><i class="fas fa-id-card"></i> La pièce d'identité du souscripteur (CIN / passeport).</li>
+    <li><i class="fas fa-file-alt"></i> Preuve de propriété (titre de propriété ou contrat de vente).</li>
+    <li><i class="fas fa-building"></i> Reçu de la taxe foncière.</li>
+    <li><i class="fas fa-file-invoice"></i> Factures de services publics (électricité, eau, etc.).</li>
+    <li><i class="fas fa-file-contract"></i> Police d'assurance précédente (si applicable).</li>
+</ul>
+
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
