--- a/ClientAstree/Views/User/AdminPropertyManagement.cshtml
+++ b/ClientAstree/Views/User/AdminPropertyManagement.cshtml
@@ -70,7 +70,7 @@
                 </div>
 
                 <div class="row card-container">
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="card card-pricing card-raised">
                             <div class="card-body text-white">
                                 <img class="card-img" src="/img/dashboard/planning.png" alt="Manage Contract">
@@ -79,14 +79,14 @@
                                     <li class="text-white">View contracts</li>
                                     <li class="text-white">Update contract details</li>
                                 </ul>
-                                <a href="https://localhost:7054/PropertyContract" class="tn btn-neutral btn-round text-primary">
+                                <a href="https://localhost:7054/PropertyContract" class="btn btn-neutral btn-round text-primary">
                                     Manage Contracts
                                 </a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="card card-pricing card-raised">
                             <div class="card-body text-white">
                                 <img class="card-img" src="/img/dashboard/check.png" alt="Validate Contracts">
@@ -102,7 +102,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                         <div class="card card-pricing card-raised">
                             <div class="card-body text-white">
                                 <img class="card-img" src="/img/dashboard/cross.png" alt="Unvalidate Contracts">
