--- a/ClientAstree/Views/Shared/_SideMenu.cshtml
+++ b/ClientAstree/Views/Shared/_SideMenu.cshtml
@@ -103,7 +103,7 @@
             {
                 @if(claim.Type=="role")
                 {
-                    @if(claim.Value=="Admin")
+                    @if(claim.Value=="Member")
                     {
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="Dashboard">
