--- a/ClientAstree/Views/AutomobileContract/ContractDetails.cshtml
+++ b/ClientAstree/Views/AutomobileContract/ContractDetails.cshtml
@@ -56,7 +56,7 @@
     }
 
     .modal-content {
-        background-color: rgba(255, 255, 255, 0.9);
+        background-color: #FEFAEE;
         padding: 20px;
         border-radius: 8px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -65,6 +65,10 @@
     .modal-footer {
         display: flex;
         justify-content: space-between;
+    }
+
+    .wider-modal {
+        max-width: 40%;
     }
 
     hr {
@@ -147,7 +151,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="signContractModal" tabindex="-1" role="dialog" aria-labelledby="signContractModalLabel" aria-hidden="true">
-    <div class="modal-dialog" role="document">
+    <div class="modal-dialog wider-modal" role="document">
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title" id="signContractModalLabel">Sign Contract</h5>
@@ -156,6 +160,7 @@
                 </button>
             </div>
             <div class="modal-body">
+                <img src="/img/contract.gif" alt="Signing GIF" class="img-fluid mb-3"/>
                 <p>If you want to sign this contract, please provide the following documents:</p>
                 <ul>
                     <li><i class="fas fa-id-card"></i> La pièce d'identité du souscripteur (CIN / passeport).</li>
