--- a/ClientAstree/Views/Shared/_SideMenu.cshtml
+++ b/ClientAstree/Views/Shared/_SideMenu.cshtml
@@ -118,7 +118,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">
+                            <a class="nav-link" asp-controller="User" asp-action="Mydues">
                                 <i class="fas fa-money-bill"></i> <!-- Icon -->
                                 <p>My dues</p>
                             </a>
