--- a/ClientAstree/Views/Shared/_SideMenu.cshtml
+++ b/ClientAstree/Views/Shared/_SideMenu.cshtml
@@ -106,44 +106,38 @@
                     @if(claim.Value=="Member")
                     {
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="User" asp-action="Dashboard">
-                                <i class="fas fa-tachometer-alt"></i> <!-- Icon -->
-                                <p>Dashboard</p>
+                            <a class="nav-link" asp-controller="User" asp-action="Profile">
+                                <i class="fas fa-user"></i>
+                                <p>Profile</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="MyContract">
-                                <i class="fas fa-file-contract"></i> <!-- Icon -->
+                                <i class="fas fa-file-contract"></i>
                                 <p>My Contracts</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="Mydues">
-                                <i class="fas fa-money-bill"></i> <!-- Icon -->
+                                <i class="fas fa-money-bill"></i>
                                 <p>My dues</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Complaints" asp-action="MyComplaints">
-                                <i class="fas fa-exclamation-circle"></i> <!-- Icon -->
+                                <i class="fas fa-exclamation-circle"></i>
                                 <p>My Claims</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Chat" asp-action="AdminChatRoom">
-                                <i class="fas fa-comments"></i> <!-- Icon -->
+                                <i class="fas fa-comments"></i>
                                 <p>Chat with Admin</p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="User" asp-action="Profile">
-                                <i class="fas fa-user"></i> <!-- Icon -->
-                                <p>Profile</p>
-                            </a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="#">
-                                <i class="fas fa-building"></i> <!-- Icon -->
+                                <i class="fas fa-building"></i>
                                 <p>Agencies</p>
                             </a>
                         </li>
@@ -152,43 +146,43 @@
                     {
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="Dashboard">
-                                <i class="fas fa-tachometer-alt"></i> <!-- Icon -->
+                                <i class="fas fa-tachometer-alt"></i>
                                 <p>Dashboard</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="Index">
-                                <i class="fas fa-users"></i> <!-- Icon -->
+                                <i class="fas fa-users"></i>
                                 <p>Users</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="User" asp-action="AdminAutomobile">
-                                <i class="fas fa-car"></i> <!-- Icon -->
+                                <i class="fas fa-car"></i>
                                 <p>Automobile</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="User" asp-action="AdminPropertyManagement">
-                                <i class="fas fa-home"></i> <!-- Icon -->
+                                <i class="fas fa-home"></i>
                                 <p>Property</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Complaints" asp-action="Index">
-                                <i class="fas fa-exclamation-circle"></i> <!-- Icon -->
+                                <i class="fas fa-exclamation-circle"></i>
                                 <p>View Complaints</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Complaints" asp-action="Admin">
-                                <i class="fas fa-cogs"></i> <!-- Icon -->
+                                <i class="fas fa-cogs"></i>
                                 <p>Manage Complaints</p>
                             </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-controller="Chat" asp-action="Index">
-                                <i class="fas fa-comments"></i> <!-- Icon -->
+                                <i class="fas fa-comments"></i>
                                 <p>Chat Rooms</p>
                             </a>
                         </li>
